--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
                 </g>
             </svg>
             <div class="dropdown-content">
-                <a href="/index.html">Início</a>
+                <a href="./index.html">Início</a>
                 <a href="#">Publi</a>
-                <a href="/contact.html">Contato</a>
+                <a href="./contact.html">Contato</a>
             </div>
         </div>
     </header>
